--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <title>Blog</title>
     </head>
     <body>
-        <a href="./">Home</a>
-        <a href="./Contact.html" target="_self">Contact me</a>
-        <a href="./Skill.html" target="_self">My skills</a>
-        <h1><b>Welcome to My Website</b></h1>
-        <hr />
+        <div class="modau">
+            <a href="./" target="_self" title="Home">Home</a>
+            <a href="./Contact.html" target="_self" title="Contact">Contact me</a>
+            <a href="./Skill.html" target="_self" title="Skill">My skills</a>
+            <h1><b>Welcome to My Website</b></h1>
+            <hr />
+        </div>
 
         <h2><b>Nguyễn Trọng Bình</b></h2>
-        <p>Sinh viên ngành sư pham Toán học - QNU</p>
+        <p>Sinh viên ngành sư phạm Toán học - QNU</p>
         <hr />
 
         <a href="./Contact.html" target="_self"> <img src="./avatar.jpg" alt="My avatar" /></a>
