--- a/Skill.html
+++ b/Skill.html
@@ -7,11 +7,13 @@
         <title>My skills</title>
     </head>
     <body>
-        <a href="./">Home</a>
-        <a href="./Contact.html" target="_self">Contact me</a>
-        <a href="./Skill.html" target="_self">My skills</a>
-        <h1><b>Welcome to My Website</b></h1>
-        <hr />
+        <div class="modau">
+            <a href="./" target="_self" title="Home">Home</a>
+            <a href="./Contact.html" target="_self" title="Contact">Contact me</a>
+            <a href="./Skill.html" target="_self" title="Skill">My skills</a>
+            <h1><b>Welcome to My Website</b></h1>
+            <hr />
+        </div>
 
         <p>
             Thông tin của em ạ <br />
