--- a/Contact.html
+++ b/Contact.html
@@ -7,14 +7,21 @@
         <title>My Contact</title>
     </head>
     <body>
-        <a href="./">Home</a>
-        <a href="./Contact.html" target="_self">Contact me</a>
-        <a href="./Skill.html" target="_self">My skills</a>
-        <h1><b>Welcome to My Website</b></h1>
-        <hr />
+        <div class="modau">
+            <a href="./" target="_self" title="Home">Home</a>
+            <a href="./Contact.html" target="_self" title="Contact">Contact me</a>
+            <a href="./Skill.html" target="_self" title="Skill">My skills</a>
+            <h1><b>Welcome to My Website</b></h1>
+            <hr />
+        </div>
 
-        <p>My facebook: <a href="https://www.facebook.com/nguyen.binh.1702/" target="_blank">Facebook</a></p>
-        <p>My phone: <a href="tel: 0384470445" target="_blank">Number Phone</a></p>
-        <p>My email: <a href="mailto:nguyentrongbinh309@gmail.com" target="_blank">Email</a></p>
+        <div class="thongtin">
+            <p>
+                My facebook:
+                <a href="https://www.facebook.com/nguyen.binh.1702/" target="_blank" title="Facebook">Facebook</a>
+            </p>
+            <p>My phone: <a href="tel: 0384470445" target="_blank" title="Number Phone">Number Phone</a></p>
+            <p>My email: <a href="mailto:nguyentrongbinh309@gmail.com" target="_blank" title="Email">Email</a></p>
+        </div>
     </body>
 </html>
