--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Sinh viên ngành sư phạm Toán học - QNU</p>
         <hr />
 
-        <a href="./Contact.html" target="_self"> <img src="./avatar.jpg" alt="My avatar" /></a>
+        <a href="./Contact.html" target="_self" title="Contact"> <img src="./avatar.jpg" alt="My avatar" /></a>
 
         <h2><b>About me</b></h2>
         <p>
