--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div class="modau">
             <a href="./" target="_self" title="Home">Home</a>
-            <a href="./Contact.html" target="_self" title="Contact">Contact me</a>
-            <a href="./Skill.html" target="_self" title="Skill">My skills</a>
+            <a href="./Contact.html" target="_blank" title="Contact">Contact me</a>
+            <a href="./Skill.html" target="_blank" title="Skill">My skills</a>
             <h1><b>Welcome to My Website</b></h1>
             <hr />
         </div>
@@ -19,18 +19,9 @@
         <p>Sinh viên ngành sư phạm Toán học - QNU</p>
         <hr />
 
-        <a href="./Contact.html" target="_self" title="Contact"> <img src="./avatar.jpg" alt="My avatar" /></a>
+        <a href="./Contact.html" target="_blank" title="Contact"> <img src="./avatar.png" alt="My avatar" /></a>
 
         <h2><b>About me</b></h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis autem exercitationem nobis, ipsam sint
-            deleniti laboriosam eius. Eos aspernatur sapiente qui, totam placeat quam, minima quae nobis quis laudantium
-            eveniet similique vitae, hic fugiat error quo numquam ab dolorem voluptatum praesentium eligendi? Aspernatur
-            voluptates odit doloremque hic, consequuntur mollitia, laborum nulla unde earum maiores repudiandae porro
-            distinctio magnam. Earum quasi dignissimos, incidunt magni, tempore beatae necessitatibus autem deserunt
-            doloribus officiis recusandae aperiam quidem deleniti, libero minima pariatur dolor at laborum possimus sunt
-            iure quae. Odio quos architecto facilis ipsa laudantium. Esse voluptate in hic, quod quam eveniet facilis
-            eligendi nemo.
-        </p>
+        <p>Demo</p>
     </body>
 </html>
