--- a/Skill.html
+++ b/Skill.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="modau">
-            <a href="./" target="_self" title="Home">Home</a>
-            <a href="./Contact.html" target="_self" title="Contact">Contact me</a>
-            <a href="./Skill.html" target="_self" title="Skill">My skills</a>
+            <a href="./index.html" title="Home">Home</a>
+            <a href="./Contact.html" title="Contact">Contact me</a>
+            <a href="" title="Skill">My skills</a>
             <h1><b>Welcome to My Website</b></h1>
             <hr />
         </div>
