--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="modau">
-            <a href="./" target="_self" title="Home">Home</a>
-            <a href="./Contact.html" target="_blank" title="Contact">Contact me</a>
-            <a href="./Skill.html" target="_blank" title="Skill">My skills</a>
+            <a href="" title="Home">Home</a>
+            <a href="./Contact.html" title="Contact">Contact me</a>
+            <a href="./Skill.html" title="Skill">My skills</a>
             <h1><b>Welcome to My Website</b></h1>
             <hr />
         </div>
@@ -19,7 +19,7 @@
         <p>Sinh viên ngành sư phạm Toán học - QNU</p>
         <hr />
 
-        <a href="./Contact.html" target="_blank" title="Contact"> <img src="./avatar.png" alt="My avatar" /></a>
+        <a href="./Contact.html" title="Contact"> <img src="./avatar.png" alt="My avatar" /></a>
 
         <h2><b>About me</b></h2>
         <p>Demo</p>
