--- a/Contact.html
+++ b/Contact.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="modau">
-            <a href="./" target="_self" title="Home">Home</a>
-            <a href="./Contact.html" target="_self" title="Contact">Contact me</a>
-            <a href="./Skill.html" target="_self" title="Skill">My skills</a>
+            <a href="./index.html" title="Home">Home</a>
+            <a href="" title="Contact">Contact me</a>
+            <a href="./Skill.html" title="Skill">My skills</a>
             <h1><b>Welcome to My Website</b></h1>
             <hr />
         </div>
@@ -18,10 +18,10 @@
         <div class="thongtin">
             <p>
                 My facebook:
-                <a href="https://www.facebook.com/nguyen.binh.1702/" target="_self" title="Facebook">Facebook</a>
+                <a href="https://www.facebook.com/nguyen.binh.1702/" target="_blank" title="Facebook">Facebook</a>
             </p>
-            <p>My phone: <a href="tel: 0384470445" target="_self" title="Number Phone">Number Phone</a></p>
-            <p>My email: <a href="mailto:nguyentrongbinh309@gmail.com" target="_self" title="Email">Email</a></p>
+            <p>My phone: <a href="tel: 0384470445" target="_blank" title="Number Phone">Number Phone</a></p>
+            <p>My email: <a href="mailto:nguyentrongbinh309@gmail.com" target="_blank" title="Email">Email</a></p>
         </div>
     </body>
 </html>
