--- a/Contact.html
+++ b/Contact.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+        <!-- Nhúng font awesome -->
         <link rel="stylesheet" href="style.css" />
         <title>My Contact</title>
     </head>
@@ -18,10 +20,22 @@
         <div class="thongtin">
             <p>
                 My facebook:
-                <a href="https://www.facebook.com/nguyen.binh.1702/" target="_blank" title="Facebook">Facebook</a>
+                <a href="https://www.facebook.com/nguyen.binh.1702/" target="_blank" title="Facebook"
+                    ><i class="fa-brands fa-facebook"></i> Facebook</a
+                >
             </p>
-            <p>My phone: <a href="tel: 0384470445" target="_blank" title="Number Phone">Number Phone</a></p>
-            <p>My email: <a href="mailto:nguyentrongbinh309@gmail.com" target="_blank" title="Email">Email</a></p>
+            <p>
+                My phone:
+                <a href="tel: 0384470445" target="_blank" title="Number Phone"
+                    ><i class="fa-solid fa-phone"></i> Number Phone</a
+                >
+            </p>
+            <p>
+                My email:
+                <a href="mailto:nguyentrongbinh309@gmail.com" target="_blank" title="Email"
+                    ><i class="fa-solid fa-envelope"></i> Email</a
+                >
+            </p>
         </div>
     </body>
 </html>
